# nn_magnetometer

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
data/map/: 0_map.csv  180_map.csv  270_map.csv  90_map.csv
data/models/: 11202024_model_lidar_on_off.pth  11202024_model_v2.1.pth  11202024_model_v2.pth  11202024_model_v3.1.pth  11202024_model_v3.pth  141124_model.pth  141124_model_with_scale.pth  mag_inn_model_v0.0.1.pth  mag_nn_model_v3.01.pth  mag_nn_model_v3.02.pth  mag_nn_model_v3.2.pth  mag_nn_model_v4.0.0.pth  mag_nn_model_v4.0.1.pth  mag_nn_model_v4.0.2.pth  mag_nn_model_v4.0.3.pth  mag_nn_model_v4.0.4.pth  mag_nn_model_v4.0.5.pth  mag_nn_model_v4.0.6.pth  mag_nn_model_v4.0.7.pth  mag_nn_model_v4.1.0.pth  mag_nn_model_v4.1.1.pth  mag_nn_model_v4.1.2.pth  mag_nn_model_v4.1.3.pth  mag_nn_model_v4.1.4.pth  mag_nn_model_v4.1.5.pth  mag_nn_model_v4.1.6.pth  mag_nn_model_v4.1.7.pth  mag_nn_model_v4.1.8.pth  mag_nn_model_v4.1.9.pth  nn_magnetometer_model_v0.0.1.pth
data/paths/: continous_cycle.csv  figure8_path.csv  lawnmowerSections_5.csv  lawnmower_path25.csv  lawnmower_path5.csv  path.csv  sinwave_data.csv  skinny_figure8_path.csv
launch/: nn_magnetometer.launch.yaml  nn_test.launch.yaml  nn_test_sim.launch.yaml  path_follower.launch.yaml
magnav_nn_sim/: SimpleNN.py  magnav_inn.py  magnav_nn.py  magnav_nn_node.py  magnav_nn_sim.py  nn_magnetometer.py  plot_paths_on_map.ipynb  plotting.py
nn_magnetometer/: nn_magnetometer.py  path_follower.py
