<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nn_magnetometer</name>
  <version>0.0.1</version>
  <description>A package that implements a neural based magnetometer</description>
  <maintainer email="apenumarti@ufl.edu">Aditya Penumarti</maintainer>
  <license>MIT</license>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
